--- a/test.ipynb
+++ b/test.ipynb
@@ -114,13 +114,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(images, labels, test_size=0.2, random_state=42)\n"
+    "x_train, x_test, y_train, y_test = train_test_split(images, labels, test_size=0.2, random_state=42, shuffle=True)\n"
    ]
   },
   {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,49 +161,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "27/27 [==============================] - 105s 3s/step - loss: 1.8861 - accuracy: 0.4089 - val_loss: 1.0519 - val_accuracy: 0.4067\n",
-      "Epoch 2/10\n",
-      "27/27 [==============================] - 82s 3s/step - loss: 0.9889 - accuracy: 0.4844 - val_loss: 0.9226 - val_accuracy: 0.5694\n",
-      "Epoch 3/10\n",
-      "27/27 [==============================] - 88s 3s/step - loss: 0.8751 - accuracy: 0.6307 - val_loss: 0.9391 - val_accuracy: 0.6555\n",
-      "Epoch 4/10\n",
-      "27/27 [==============================] - 85s 3s/step - loss: 1.0378 - accuracy: 0.4400 - val_loss: 1.0060 - val_accuracy: 0.4115\n",
-      "Epoch 5/10\n",
-      "27/27 [==============================] - 96s 4s/step - loss: 1.0804 - accuracy: 0.3729 - val_loss: 1.0858 - val_accuracy: 0.3876\n",
-      "Epoch 6/10\n",
-      "27/27 [==============================] - 97s 4s/step - loss: 1.0817 - accuracy: 0.3729 - val_loss: 1.0821 - val_accuracy: 0.3876\n",
-      "Epoch 7/10\n",
-      "27/27 [==============================] - 96s 4s/step - loss: 1.0772 - accuracy: 0.3729 - val_loss: 1.0788 - val_accuracy: 0.4067\n",
-      "Epoch 8/10\n",
-      "27/27 [==============================] - 99s 4s/step - loss: 1.0729 - accuracy: 0.4424 - val_loss: 1.0760 - val_accuracy: 0.4067\n",
-      "Epoch 9/10\n",
-      "27/27 [==============================] - 103s 4s/step - loss: 1.0695 - accuracy: 0.4424 - val_loss: 1.0735 - val_accuracy: 0.4067\n",
-      "Epoch 10/10\n",
-      "27/27 [==============================] - 108s 4s/step - loss: 1.0663 - accuracy: 0.4424 - val_loss: 1.0714 - val_accuracy: 0.4067\n"
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m model\u001b[39m.\u001b[39mcompile(optimizer\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39madam\u001b[39m\u001b[39m'\u001b[39m, loss\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39msparse_categorical_crossentropy\u001b[39m\u001b[39m'\u001b[39m, metrics\u001b[39m=\u001b[39m[\u001b[39m'\u001b[39m\u001b[39maccuracy\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m      2\u001b[0m model\u001b[39m.\u001b[39mfit(x_train, y_train, epochs\u001b[39m=\u001b[39m\u001b[39m20\u001b[39m, batch_size\u001b[39m=\u001b[39m\u001b[39m32\u001b[39m, validation_data\u001b[39m=\u001b[39m(x_test, y_test))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'model' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x1fab8691950>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
-    "model.fit(x_train, y_train, epochs=10, batch_size=32, validation_data=(x_test, y_test))\n"
+    "model.fit(x_train, y_train, epochs=20, batch_size=32, validation_data=(x_test, y_test))\n"
    ]
   },
   {
@@ -216,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
