--- a/Getting Started.ipynb
+++ b/Getting Started.ipynb
@@ -120,7 +120,7 @@
     }
    ],
    "source": [
-    "%pip install tensorflow tensorflow-gpu opencv-python matplotlib"
+    "%pip install tensorflow tensorflow-gpu opencv-python matplotlib cv2"
    ]
   },
   {
