--- a/Getting Started.ipynb
+++ b/Getting Started.ipynb
@@ -37,8 +37,13 @@
     }
    ],
    "source": [
-    "%pip install tensorflow tensorflow-gpu opencv-python matplotlib cv2"
+    "%pip install tensorflow tensorflow-gpu opencv-python matplotlib "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
